--- a/css-files/theme.css
+++ b/css-files/theme.css
@@ -4,6 +4,75 @@
 * [target-current], nav a [target-current] {
   font-weight: bolder;
 }
+*, nav a {
+  transition: opacity 200ms;
+}
+
+.text-shadow-1 {
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
+.box-shadow-1 {
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
+.abs {
+  position: absolute;
+}
+.abs.sqr100px {
+  min-height: 100px;
+  min-width: 100px;
+}
+.abs.cir100px {
+  min-height: 100px;
+  min-width: 100px;
+  border-radius: 100px;
+}
+.abs.cir200px {
+  min-height: 200px;
+  min-width: 200px;
+  border-radius: 200px;
+}
+.abs.cir300px {
+  min-height: 300px;
+  min-width: 300px;
+  border-radius: 300px;
+}
+.abs.cir500px {
+  min-height: 500px;
+  min-width: 500px;
+  border-radius: 500px;
+}
+.abs.blur100px {
+  filter: blur(100px);
+}
+.abs.blur200px {
+  filter: blur(200px);
+}
+.abs.blur300px {
+  filter: blur(300px);
+}
+.abs.blur500px {
+  filter: blur(500px);
+}
+.abs.white {
+  background-color: white;
+}
+.abs.white-50 {
+  background-color: white;
+  opacity: 0.5;
+}
+.abs.white-25 {
+  background-color: white;
+  opacity: 0.25;
+}
+.abs.blue {
+  background-color: blue;
+}
+
+.fade-out {
+  opacity: 0;
+}
 
 .primary.bg {
   background-color: rgba(0, 0, 0, 0.5);
