--- a/scss-files/theme.scss
+++ b/scss-files/theme.scss
@@ -3,11 +3,78 @@
     [target-current] {
         font-weight: bolder;
     }
+    transition: opacity 200ms;
 }
 
 $background-blur: 50px;
 $primary-border-color: rgba(90,90,90,0.75);
 $secondary-border-color: rgba(90,90,90,0.75);
+
+.text-shadow-1 {
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
+.box-shadow-1 {
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
+.abs {
+    position: absolute;
+    &.sqr100px {
+        min-height: 100px;
+        min-width: 100px;
+    }
+    &.cir100px {
+        min-height: 100px;
+        min-width: 100px;
+        border-radius: 100px;
+    }
+    &.cir200px {
+        min-height: 200px;
+        min-width: 200px;
+        border-radius: 200px;
+    }
+    &.cir300px {
+        min-height: 300px;
+        min-width: 300px;
+        border-radius: 300px;
+    }
+    &.cir500px {
+        min-height: 500px;
+        min-width: 500px;
+        border-radius: 500px;
+    }
+    &.blur100px {
+        filter: blur(100px);
+    }
+    &.blur200px {
+        filter: blur(200px);
+    }
+    &.blur300px {
+        filter: blur(300px);
+    }
+    &.blur500px {
+        filter: blur(500px);
+    }
+    &.white {
+        background-color: white;
+    }
+    &.white-50 {
+        background-color: white;
+        opacity: 0.5;
+    }
+    &.white-25 {
+        background-color: white;
+        opacity: 0.25;
+    }
+    &.blue {
+        background-color: blue;
+    }
+}
+
+.fade-out {
+    opacity: 0;
+}
 
 .primary {
     &.bg {
