--- a/scss-files/theme.scss
+++ b/scss-files/theme.scss
@@ -19,11 +19,20 @@ $secondary-border-color: rgba(90,90,90,0.75);
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
+.min-h-100 {
+    min-height: 100%;
+}
+
 .abs {
     position: absolute;
     &.sqr100px {
         min-height: 100px;
         min-width: 100px;
+    }
+    &.cir50px {
+        min-height: 50px;
+        min-width: 50px;
+        border-radius: 50px;
     }
     &.cir100px {
         min-height: 100px;
@@ -44,6 +53,9 @@ $secondary-border-color: rgba(90,90,90,0.75);
         min-height: 500px;
         min-width: 500px;
         border-radius: 500px;
+    }
+    &.blur50px {
+        filter: blur(50px);
     }
     &.blur100px {
         filter: blur(100px);
