--- a/css-files/theme.css
+++ b/css-files/theme.css
@@ -97,6 +97,9 @@
 .primary.bd-1px {
   border: 1px solid rgba(90, 90, 90, 0.75);
 }
+.primary.bd-1px-bottom {
+  border-bottom: 1px solid rgba(90, 90, 90, 0.75);
+}
 .primary.bd-2px {
   border: 2px solid rgba(90, 90, 90, 0.75);
 }
