--- a/scss-files/theme.scss
+++ b/scss-files/theme.scss
@@ -100,6 +100,9 @@ $secondary-border-color: rgba(90,90,90,0.75);
     &.bd-1px {
         border: 1px solid $primary-border-color;
     }
+    &.bd-1px-bottom {
+        border-bottom: 1px solid $primary-border-color;
+    }
     &.bd-2px {
         border: 2px solid $primary-border-color;
     }
